# the-evolution-of-todo

./: .gitignore  LICENSE  README.md
phase-1-console/: AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt  run.py
phase-1-console/.specify/memory/: constitution.md
phase-1-console/history/prompts/general/: 001-git-workflow-agent.general.prompt.md  1-git-workflow-execution.general.prompt.md
phase-1-console/specs/todo-app/: plan.md  spec.md  tasks.md
phase-1-console/src/: main.py
phase-1-console/src/interfaces/: console.py
phase-1-console/src/managers/: task_manager.py
phase-1-console/src/models/: task.py
phase-2-fullstack/: CLAUDE.md  README.md
phase-2-fullstack/.specify/memory/: constitution.md
phase-2-fullstack/backend/: CLAUDE.md  README.md  pyproject.toml  run_migrations.py
phase-2-fullstack/backend/alembic/versions/: 2026-01-29_5050a5c0f214_create_users_and_tasks_tables.py
phase-2-fullstack/backend/src/: config.py  database.py  main.py
phase-2-fullstack/backend/src/models/: user.py
phase-2-fullstack/backend/src/routers/: tasks.py
phase-2-fullstack/backend/src/services/: task_service.py  user_service.py
phase-2-fullstack/backend/src/utils/: validation.py
phase-2-fullstack/frontend/: CLAUDE.md  README.md  package-lock.json  package.json
phase-2-fullstack/frontend/app/: layout.tsx  page.tsx
phase-2-fullstack/frontend/components/: Header.tsx  TaskItem.tsx
phase-2-fullstack/frontend/lib/: api.ts  types.ts
phase-2-fullstack/history/adr/: 0001-full-stack-technology-stack.md  0004-database-strategy.md
phase-2-fullstack/specs/001-task-crud-auth/: plan.md
phase-3-ai-chatbot/: CLAUDE.md  README.md
phase-3-ai-chatbot/.specify/memory/: constitution.md
phase-3-ai-chatbot/backend/: README.md  alembic.ini  pyproject.toml  run_migrations.py
phase-3-ai-chatbot/backend/src/: main.py
phase-3-ai-chatbot/backend/src/models/: user.py
phase-3-ai-chatbot/backend/src/routers/: auth.py  chat.py
phase-3-ai-chatbot/backend/src/schemas/: auth.py  task.py
phase-3-ai-chatbot/backend/src/services/: message_service.py
phase-3-ai-chatbot/backend/src/utils/: agent.py  security.py
phase-3-ai-chatbot/frontend/: CLAUDE.md  README.md  package.json
phase-3-ai-chatbot/frontend/app/: layout.tsx  page.tsx
phase-3-ai-chatbot/frontend/components/: EmptyState.tsx  Header.tsx  RegisterForm.tsx
phase-3-ai-chatbot/frontend/lib/: api.ts  chat-api.ts  types.ts
phase-3-ai-chatbot/history/adr/: 0005-ai-agent-technology-stack.md  0007-mcp-server-architecture.md
phase-3-ai-chatbot/specs/001-phase-2-fullstack/: quickstart.md  (+1 more)
phase-4-kubernetes/: .gitignore  CLAUDE.md  README.md  docker-compose.yml
phase-4-kubernetes/.claude/: context-summary.md
phase-4-kubernetes/backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_chat_endpoint.py
phase-4-kubernetes/backend/alembic/: env.py
phase-4-kubernetes/backend/alembic/versions/: 2026-01-29_5050a5c0f214_create_users_and_tasks_tables.py
phase-4-kubernetes/backend/src/: config.py  database.py  main.py
phase-4-kubernetes/backend/src/mcp/: __init__.py  config.py  server.py  tools.py
phase-4-kubernetes/backend/src/middleware/: auth.py
phase-4-kubernetes/backend/src/models/: conversation.py  task.py
phase-4-kubernetes/backend/src/routers/: __init__.py  health.py  tasks.py
phase-4-kubernetes/backend/src/schemas/: chat.py
phase-4-kubernetes/backend/src/services/: __init__.py  conversation_service.py  task_service.py
phase-4-kubernetes/frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  proxy.ts
phase-4-kubernetes/helm/: Chart.yaml  README.md  secrets-local.yaml  values-dev.yaml  values.yaml  values.yaml.backup
phase-4-kubernetes/scripts/: build-images.sh  create-secrets.sh  deploy-local.sh  verify-environment.sh
(+117 files in other folders)
