[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[project]
name = "in-memory-todo-app"
version = "1.0.0"
description = "A simple in-memory todo application that runs in the console"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Spec-Driven Developer"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "rich>=12.0.0",
    "questionary>=1.10.0"
]

[project.scripts]
todo-app = "src.main:main"

[project.urls]
"Homepage" = "https://github.com/your-username/in-memory-todo-app"
"Bug Reports" = "https://github.com/your-username/in-memory-todo-app/issues"

[tool.setuptools.packages.find]
where = ["src"]