[project]
name = "todo-backend-phase3"
version = "0.2.0"
description = "Todo AI Chatbot Backend - Phase 3"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.1",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "pydantic[email]>=2.10.3",
    "pydantic-settings>=2.6.1",
    "alembic>=1.14.0",
    "python-multipart>=0.0.20",
    "openai>=1.59.5",
    "httpx>=0.28.1",
    "pyjwt>=2.11.0",
    "openai-agents[litellm]>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ADD THIS SECTION ✅
[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.28.1",
]
